tests/baselines/reference/parserForInStatement3.errors.txt
parserForInStatement3.ts(1,13): error TS1091: Only a single variable declaration is allowed in a 'for...in' statement.
parserForInStatement3.ts(1,18): error TS2304: Cannot find name 'X'.


==== parserForInStatement3.ts (2 errors) ====
    for (var a, b in X) {
                ~
!!! error TS1091: Only a single variable declaration is allowed in a 'for...in' statement.
                     ~
!!! error TS2304: Cannot find name 'X'.
    }